<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2014 MbientLab Inc. All rights reserved.

IMPORTANT: Your use of this Software is limited to those specific rights
granted under the terms of a software license agreement between the user who 
downloaded the software, his/her employer (which must be your employer) and 
MbientLab Inc, (the "License").  You may not use this Software unless you 
agree to abide by the terms of the License which can be found at 
www.mbientlab.com/terms . The License limits your use, and you acknowledge, 
that the  Software may not be modified, copied or distributed and can be used 
solely and exclusively in conjunction with a MbientLab Inc, product.  Other 
than for the foregoing purpose, you may not use, reproduce, copy, prepare 
derivative works of, modify, distribute, perform, display or sell this 
Software and/or its documentation for any purpose.

YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE 
PROVIDED “AS IS” WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED, 
INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE, 
NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL 
MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE, 
STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE 
THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED 
TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST 
PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY, 
SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY 
DEFENSE THEREOF), OR OTHER SIMILAR COSTS.

Should you have any questions regarding your right to use this Software, 
contact MbientLab Inc, at www.mbientlab.com.
 
-->
<resources>

    <string name="app_name">VibWear</string>

    <string name="ble_not_supported">BLE not supported</string>
    <string name="refresh">Refresh</string>
    <string name="inboundsms">incoming sms</string>
    <string name="audiosensor">audio sensor</string>
    <string name="label_change_board_name_msg">Device name</string>
    <string name="change">Change</string>
    <string name="test">Test</string>
    <string name="stop">Interrupt</string>
    <string name="alarm">Alarm</string>
    <string name="phone">Phone</string>
    <string name="notify_me">Alert me</string>
    <string name="label_low_battery">On Low Battery</string>
    <string name="factory_device_name">MetaWear</string>
    <string name="default_device_name">VibWear</string>
    <string name="pref_title_inbound_sms">Sms</string>
    <string name="pref_summary_inbound_sms">Incoming sms alert</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_title_inbound_sms_contact">Contacts</string>
    <string name="pref_summary_inbound_sms_contact">Receive alert by all</string>
    <string name="pref_title_alarm">Alarm</string>
    <string name="pref_summary_alarm">Alert at</string>
    <string name="pref_contact_dialog_message">Select contact to receive alert from</string>
    <string name="pref_dialog_positive_button_text">OK</string>
    <string name="pref_dialog_negative_button_text">Cancel</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_test">Test</string>
    <string name="menu_about">About</string>
    <string name="delete">Delete</string>
    <string name="signal_level_msg">Signal %d%%</string>
    <string name="battery_level_msg">Battery %s%%</string>

    <string name="accessibility_dialog_title">Accessibility</string>
    <string name="accessibility_dialog_msg">VibWear accessibility is not enabled.\nEnable VibWear to receive notification events?</string>

    <string name="callServiceDesc">Call alert off!</string>
    <string name="smsServiceDesc">Sms alert off!</string>
    <string name="chatServiceDesc">Chat alert off!</string>
    <string name="sosServiceDesc">S.O.S. alert off!</string>
    <string name="activeCallServiceDesc">Call alert on!</string>
    <string name="activeAudioServiceDesc">Audio alert on!</string>
    <string name="audioServiceDesc">Audio alert off!</string>
    <string name="activeSmsServiceDesc">Sms alert on!</string>
    <string name="activeChatServiceDesc">Chat alert on!</string>
    <string name="activeSosServiceDesc">S.O.S. alert on!</string>
    <string name="tapAlarmDesc">Tap to set alarm</string>
    <string name="tap_to_show">Tap to show</string>
    <string name="notification_ticker">VibWear app listening</string>
    <string name="progressTitle">Device connection</string>
    <string name="progressMsg">please wait...</string>
    <string name="reconnectProgressTitle">Connection lost</string>
    <string name="reconnectProgressMsg">trying to reconnect...</string>
    <string name="stop_notification_msg">
        Do you want Vibwear to stop alert you for this notification?
    </string>
    <string name="stop_notification_btn_confirm">Stop</string>
    <string name="stop_notification_btn_cancel">Continue</string>
    <string name="label_chat_notifications">Notification black list</string>
    <string name="reenable_notification_title">Notification</string>
    <string name="reenable_notification_msg">Do you want to restore notifications from %s?</string>
    <string name="reenable_notification_confirm">Confirm</string>
    <string name="reenable_notification_cancel">Cancel</string>
    <string name="delete_sos_contact_title">Contact</string>
    <string name="delete_sos_contact_msg">Do you want to remove %s as an S.O.S. contact?</string>
    <string name="delete_sos_contact_confirm">Confirm</string>
    <string name="delete_sos_contact_cancel">Cancel</string>
    <string name="pick_contact_label">Browse</string>
    <string name="label_sos_msg">S.O.S. message</string>
    <string name="label_sos_contacts">S.O.S. contacts</string>
    <string name="label_vib_slider">Vibration length</string>
    <string name="label_audio_slider">Sensible threshold</string>
    <string name="label_time_picker_alarm">Set alarm</string>
    <string name="label_vib_zero_sec">0</string>
    <string name="label_vib_five_sec">5</string>
    <string name="label_vib_ten_sec">10</string>
    <string name="label_audio_low_level">100</string>
    <string name="label_audio_mid_level">5K</string>
    <string name="label_audio_high_level">10K</string>
    <string name="not_available">n/a</string>
    <string name="contact_with_number_msg">Only contacts with numbers will be added</string>
    <string name="sos_msg_hint">Type here your message</string>
    <string name="sos_default_msg">Vibwear: type your message on s.o.s. settings</string>
    <string name="tap_to_block_notification">Block this notification</string>
    <string name="title_dfu_dialog">Firmware Update</string>
    <string name="title_firmware_update">Firmware Firmware</string>
    <string name="label_dfu_dialog_confirm">Ok</string>
    <string name="label_dfu_dialog_cancel">Cancel</string>
    <string name="label_update_firmware">Upgrade</string>
    <string name="label_check_for_update">Check for update</string>

    <string name="notify_dfu_bootloader">Entering Bootloader Mode</string>
    <string name="notify_dfu_starting">Starting Update</string>
    <string name="notify_dfu_validating">Validating</string>
    <string name="notify_dfu_disconnecting">Disconnecting</string>
    <string name="notify_dfu_uploading">Uploading</string>
    <string name="notify_dfu_success">DFU Succeeded</string>
    <string name="notify_dfu_fail">DFU Failed</string>

    <string name="message_dfu_accept">A firmware update is available.  Do you wish to download the newest firmware version?</string>
    <string name="message_dfu">Updating the firmware to the latest version, please wait</string>
    <string name="message_dfu_success">Firmware successfully updated to the latest version</string>
    <string name="message_dfu_fail">Firmware failed to update.</string>
    <string name="message_dfu_latest">Your board is already running the latest firmware.  Do you still wish to proceed with the firmware update anyways?</string>

    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>

    <string name="killer_app_dialog_title">Warning!!</string>
    <string name="killer_app_dialog_warning_text">
        Some installed apps has been detected causing issues to VibWear. Please remove or configure them properly.
    </string>

    <string name="killer_app_dialog_hide_me_text">I got it</string>

    <string name="my_position">Into message</string>
    <string name="label_geolocation">My position</string>
    <string name="sos_activate_gps_msg">GPS activation allow VibWear to send text with geolocation</string>
    <string name="activate_gps_btn_confirm">Activate</string>
    <string name="activate_gps_btn_cancel">Cancel</string>

</resources>
