<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/phone" android:key="pref_key_phone_settings">
        <CheckBoxPreference android:key="pref_key_inbound_sms" 
            android:title="@string/pref_title_inbound_sms" 
            android:defaultValue="true" 
            android:summary="@string/pref_summary_inbound_sms"/>
		<Preference android:key="pref_screen_key_inbound_sms_contact" 
		    android:summary="@string/pref_summary_inbound_sms_contact" 
		    android:title="@string/pref_title_inbound_sms_contact"
		    android:dependency="pref_key_inbound_sms"/>
	</PreferenceCategory>

    <PreferenceCategory android:title="@string/alarm" android:key="pref_key_alarm_settings">
		<pi.lamp.TimePickerPreference
		    android:dialogIcon="@drawable/ic_launcher" 
		    android:dialogTitle="@string/pref_title_alarm" 
		    android:dialogMessage="Set alert at" 
		    android:key="pref_key_alarm" 
		    android:negativeButtonText="Delete" 
		    android:positiveButtonText="Set" 
		    android:summary="@string/pref_summary_alarm" 
		    android:title="@string/pref_title_alarm"/>
	</PreferenceCategory>

</PreferenceScreen>
