<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout android:id="@+id/fragmentAudioSlider"
        android:orientation="vertical"
        android:background="@color/sectionColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:labelFor="@+id/sbAudio"
            android:text="@string/label_audio_slider"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:textStyle="normal"
            android:textSize="25sp"
            android:textColor="@color/sectionTextColor"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/label_audio_low_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="1"
            />

        <TextView
            android:text="@string/label_audio_mid_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:text="@string/label_audio_high_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sbAudio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:progress="100"
        android:max="10000" />


</LinearLayout>
